added audit logs
